[package]
name = "moomoo-adaptor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1", features = ["full"]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
anyhow = "1.0.103"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
prost = "0.14.4"
sha1 = "0.11.0"

[build-dependencies]
prost-build = "0.14.4"
